[gd_scene load_steps=13 format=3 uid="uid://cuqxfydi32cuu"]

[ext_resource type="Script" path="res://TilePlayerScript.gd" id="1_t5hbp"]
[ext_resource type="Texture2D" uid="uid://cn4m4w8mtd30k" path="res://icon.svg" id="2_rmxpn"]

[sub_resource type="Animation" id="Animation_w0u3r"]
resource_name = "IdleDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayCast2D:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}

[sub_resource type="Animation" id="Animation_7sc34"]
resource_name = "IdleLeft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayCast2D:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 0)]
}

[sub_resource type="Animation" id="Animation_nv60t"]
resource_name = "IdleRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayCast2D:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}

[sub_resource type="Animation" id="Animation_sqqyb"]
resource_name = "IdleUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayCast2D:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="Animation" id="Animation_j5rt3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayCast2D:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}

[sub_resource type="Animation" id="Animation_bq6r4"]
resource_name = "WalkDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayCast2D:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}

[sub_resource type="Animation" id="Animation_yhmp8"]
resource_name = "WalkLeft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayCast2D:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 0)]
}

[sub_resource type="Animation" id="Animation_jub5p"]
resource_name = "WalkRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayCast2D:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}

[sub_resource type="Animation" id="Animation_e6ln3"]
resource_name = "WalkUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayCast2D:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rrufy"]
_data = {
"IdleDown": SubResource("Animation_w0u3r"),
"IdleLeft": SubResource("Animation_7sc34"),
"IdleRight": SubResource("Animation_nv60t"),
"IdleUp": SubResource("Animation_sqqyb"),
"RESET": SubResource("Animation_j5rt3"),
"WalkDown": SubResource("Animation_bq6r4"),
"WalkLeft": SubResource("Animation_yhmp8"),
"WalkRight": SubResource("Animation_jub5p"),
"WalkUp": SubResource("Animation_e6ln3")
}

[node name="TilePlayerScript" type="Area2D"]
script = ExtResource("1_t5hbp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_rmxpn")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rrufy")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(6, 6)

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="PauseMenu"]
offset_left = 704.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Button" type="Button" parent="PauseMenu"]
offset_left = 712.0
offset_top = 72.0
offset_right = 1144.0
offset_bottom = 184.0
text = "Items"

[node name="Button2" type="Button" parent="PauseMenu"]
offset_left = 712.0
offset_top = 200.0
offset_right = 1144.0
offset_bottom = 312.0
text = "Pokemon"

[node name="Button3" type="Button" parent="PauseMenu"]
offset_left = 712.0
offset_top = 328.0
offset_right = 1144.0
offset_bottom = 440.0
text = "Save"

[node name="Button4" type="Button" parent="PauseMenu"]
offset_left = 712.0
offset_top = 448.0
offset_right = 1144.0
offset_bottom = 560.0
text = "Load"

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="PauseMenu/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="PauseMenu/Button4" to="." method="_on_button_4_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
